--- a/Puhaha/Puhaha/GoogleService-Info.plist
+++ b/Puhaha/Puhaha/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>257479851890-o47d92b3g2kbe29u3o4a8vem97jcpg68.apps.googleusercontent.com</string>
+	<string>763542758719-1qs47vsfncbd9j8n7kvvq8ta2ddlffce.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.257479851890-o47d92b3g2kbe29u3o4a8vem97jcpg68</string>
+	<string>com.googleusercontent.apps.763542758719-1qs47vsfncbd9j8n7kvvq8ta2ddlffce</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCpVAhBeKNzgKD1OWfeZEQ2uGyW3AZJ4Bc</string>
+	<string>AIzaSyDa3QfvN2GccJ6rsweqwOCDxK08AoOkfZ8</string>
 	<key>GCM_SENDER_ID</key>
-	<string>257479851890</string>
+	<string>763542758719</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.anjian.Puhaha</string>
+	<string>com.mc3.puhaha.whatdidyoueat</string>
 	<key>PROJECT_ID</key>
-	<string>puhaha-992a2</string>
+	<string>puhaha-2f271</string>
 	<key>STORAGE_BUCKET</key>
-	<string>puhaha-992a2.appspot.com</string>
+	<string>puhaha-2f271.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:257479851890:ios:ba7ff260df5b95cadce7eb</string>
+	<string>1:763542758719:ios:68464f0a86f8aefe169f8a</string>
 </dict>
 </plist>
