--- a/Puhaha/Puhaha/Info.plist
+++ b/Puhaha/Puhaha/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
+	<key>NSCameraUsageDescription</key>
+	<string>&apos;밥먹언?&apos;이 회원님의 기기의 카메라를 사용하여 사진을 찍고 공유할 수 있도록 지원합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>&apos;밥먹언?&apos;이 회원님의 갤러리 사진을 공유할 수 있도록 지원합니다.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
