--- a/Puhaha/Puhaha.xcodeproj/xcshareddata/xcschemes/Puhaha.xcscheme
+++ b/Puhaha/Puhaha.xcodeproj/xcshareddata/xcschemes/Puhaha.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1340"
+   LastUpgradeVersion = "1400"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CE9F9658287FA66C00783324"
-               BuildableName = "&#x1107;&#x1161;&#x11b8;&#x1106;&#x1165;&#x11a8;&#x110b;&#x1165;&#x11ab;?.app"
-               BlueprintName = "&#xbc25;&#xba39;&#xc5b8;?"
+               BlueprintIdentifier = "CE6A232E28FBDD06004E7EA7"
+               BuildableName = "Puhaha.app"
+               BlueprintName = "Puhaha"
                ReferencedContainer = "container:Puhaha.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CE9F9658287FA66C00783324"
-            BuildableName = "&#x1107;&#x1161;&#x11b8;&#x1106;&#x1165;&#x11a8;&#x110b;&#x1165;&#x11ab;?.app"
-            BlueprintName = "&#xbc25;&#xba39;&#xc5b8;?"
+            BlueprintIdentifier = "CE6A232E28FBDD06004E7EA7"
+            BuildableName = "Puhaha.app"
+            BlueprintName = "Puhaha"
             ReferencedContainer = "container:Puhaha.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CE9F9658287FA66C00783324"
-            BuildableName = "&#x1107;&#x1161;&#x11b8;&#x1106;&#x1165;&#x11a8;&#x110b;&#x1165;&#x11ab;?.app"
-            BlueprintName = "&#xbc25;&#xba39;&#xc5b8;?"
+            BlueprintIdentifier = "CE6A232E28FBDD06004E7EA7"
+            BuildableName = "Puhaha.app"
+            BlueprintName = "Puhaha"
             ReferencedContainer = "container:Puhaha.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
