[FEAT] Ready to receive the notification
* 알림을 받기 위한 초기 설정으로 firebase massaging package 추가
* info 설정

--- a/Puhaha/Puhaha/Info.plist
+++ b/Puhaha/Puhaha/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>밥먹언?</string>
+	<key>FirebaseMessagingAutoInitEnabled</key>
+	<string>No</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,5 +23,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>UILaunchScreen</key>
+	<false/>
 </dict>
 </plist>
